test/Fail/RecordWhere2.err
RecordWhere2.agda:5.7-13: error: [UnsolvedMetaVariables]
Unsolved metas at the following locations:
  RecordWhere2.agda:5.7-13
